--- a/src/elsie.common/templates/side-bar.jade
+++ b/src/elsie.common/templates/side-bar.jade
@@ -1,9 +1,9 @@
 div
   md-toolbar.md-default-theme
     .md-toolbar-tools
-      h1 {{ user.firstName }} {{ user.lastName }}
+      h1.white {{ user.firstName }} {{ user.lastName }}
       span(flex)
-      md-button(ng-click="logout()") Log out
+      md-button.md-accent(ng-click="logout()") Log out
   md-content(layout-padding)
     md-list
       md-item
