--- a/src/elsie.search/styles/search.scss
+++ b/src/elsie.search/styles/search.scss
@@ -1,17 +1,10 @@
 .search {
   position: absolute;
-  top: $bump;
+  top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   background-color: $grey-light;
-  .searchbox {
-    // position: absolute;
-    // top: 19px;
-    // left: 60px;
-    // right: 60px;
-    // z-index: $z-index-control-super;
-  }
   input[type="text"] {
     border: none;
     border-radius: 0;
@@ -21,6 +14,9 @@
     display: block;
     padding: 10px 15px;
     width: 85%;
+  }
+  h5.hint {
+    margin-top: 0;
   }
   .md-icon-button {
     width: 10%;
