--- a/src/index.jade
+++ b/src/index.jade
@@ -27,5 +27,5 @@ html
         div(side-bar)
       md-content#main
         .bar
-        div(action-bar,transparent="barTransparency()",set="barItems()",search="barSearch()")
+        div(action-bar,transparent="barTransparency()",set="barItems()",search="barSearch()",show="barVisible()")
         div(ui-view,state-class)
