--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -11,6 +11,8 @@ $bump: 24px;
 $transition: 0.35s;
 $transition-function: cubic-bezier(.36, .66, .04, 1) !default; // thanks, driftyco!
 
+$box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
 $z-index-view-below: 10;
 $z-index-view-above: 20;
 $z-index-control-main: 30;
