--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -1,28 +1,27 @@
 doctype
-.home(layout="column",layout-fill)
-  .search(layout="column",layout-align="center center",flex="{{ flex.search }}")
-    h2(ng-if="!query") Let's do this.
-    input(type="text",placeholder="Search products and stores",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-class="{ expanded: query }")
-    md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
-      md-icon close
-    h5.light.hint.md-accent(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"
-  .results(ng-if="query",flex="{{ flex.results }}")
-    md-list
-      md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
-        img.md-avatar(ng-src="{{ product.image_thumb_url }}")
-        .md-list-item-text
-          h3 {{ product.name }}
-          p {{ product.producer_name }}
-  .explore(flex="{{ flex.explore }}",ng-if="!query")
-    md-icon.swipe-down.md-primary keyboard_arrow_down
-    //- md-list
-    //-   md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
-    //-     img.md-avatar(ng-src="{{ product.image_thumb_url }}")
-    //-     .md-list-item-text
-    //-       h3 {{ product.name }}
-    //-       p {{ product.producer_name }}
-    //- md-list
-    //-   md-list-item.md-2-line(md-no-ink,ng-repeat="store in results.stores",ng-click="selectStore(store)")
-    //-     .md-list-item-text
-    //-       h3 &#35;{{ store.store_no }} {{ store.name }}
-    //-       p {{ store.address_line_1 }}
+.home
+  md-content
+    .search(layout="column",layout-align="center center",ng-class="{ expanded: query }")
+      h2(ng-if="!query") {{ welcome }}
+      input(type="text",placeholder="Search products and stores",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }")
+      md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
+        md-icon close
+      h5.light.hint.md-accent(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"      
+    .results(ng-if="query")
+      md-list
+        md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
+          img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+          .md-list-item-text
+            h3 {{ product.name }}
+            p {{ product.producer_name }}
+    .explore(ng-if="!query")
+      small.purple Not sure what to look for?
+      br
+      md-icon.swipe-down.md-primary keyboard_arrow_down
+      h5.upcase Top wine picks from kwaf
+      md-list
+        md-list-item.md-2-line(md-no-ink,ng-repeat="product in picks",ng-click="selectProduct(product)")
+          img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+          .md-list-item-text
+            h3 {{ product.name }}
+            p {{ product.producer_name }}
