--- a/src/elsie.home/styles/home.scss
+++ b/src/elsie.home/styles/home.scss
@@ -1,9 +1,13 @@
 .home {
   padding-top: $bump;
   background-color: $grey-light;
-  height: 135px;
   width: 100%;
+  height: 100%;
   overflow: visible;
+  > md-content {
+    //min-height: 100%;
+    height: 100%;
+  }
   .results {
     md-list-item {
       background-color: white;
