--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -9,13 +9,9 @@
   left: 0;
   bottom: 0;
   right: 0;
+  transition: background-position-y $transition;
   .image {
     height: 244px;
-    /*background-color: white;
-    background-size: 120%;
-    background-repeat: no-repeat;
-    background-position-x: -75%;
-    background-position-y: 60%;*/
   }
   md-toolbar.lower {
     @include gradient(rgba(0,0,0,0), rgba(0,0,0,0.4));
@@ -24,8 +20,6 @@
     height: 128px;
     color: white;
     .md-toolbar-tools {
-      //align-items: flex-start;
-      //flex-direction: column;
       display: block;
       overflow: hidden;
       .md-title {
@@ -37,16 +31,18 @@
       }
     }
   }
-  a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
+  button.md-button.md-fab {
     position: absolute;
     right: 20px;
-    top: 190px;
+    margin-top: -30px;
   }
   md-content.upper {
     overflow: hidden;
     background-color: transparent;
   }
   md-content.lower {
-    //
+    md-list-item.long {
+      padding: 16px;
+    }
   }
 }
