--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -4,8 +4,8 @@ doctype
     .image
     md-toolbar.lower
       .md-toolbar-tools
-        h2.md-title {{ product.name }}
-        h5.md-subhead {{ product.producer_name }}
+        h2.md-title.white {{ product.name }}
+        h5.md-subhead.white {{ product.producer_name }}
   md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
     md-icon(ng-if="isWatched") favorite
     md-icon(ng-if="!isWatched") favorite_border
@@ -28,11 +28,11 @@ doctype
           h3 {{ product.package }}
           p unit package
       md-divider(ng-if="product.pick")
-      md-list-item.md-3-line(ng-if="product.pick.tastingNote")
+      md-list-item.md-3-line.long(ng-if="product.pick.tastingNote")
         .md-list-item-text
           p {{ product.pick.tastingNote }}
       md-divider(ng-if="product.description")
-      md-list-item.md-3-line(ng-if="product.description")
+      md-list-item.md-3-line.long(ng-if="product.description")
         .md-list-item-text
           p {{ product.description }}
       //md-divider(ng-if="product.description && tags")
