--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -15,7 +15,7 @@ doctype
             h3 {{ product.name }}
             p {{ product.producer_name }}
     .explore(ng-if="!query")
-      small.purple Not sure what to look for?
+      small.purple Need some inspiration?
       br
       md-icon.swipe-down.md-primary keyboard_arrow_down
       h5.upcase Top wine picks from kwaf
