--- a/src/elsie.home/templates/watchlist.jade
+++ b/src/elsie.home/templates/watchlist.jade
@@ -1,5 +1,6 @@
 doctype
 .watchlist
+  pre {{ watchlist }}
   md-list(layout-padding)
     md-list-item.md-2-line(md-no-ink,ng-repeat="product in watchlist",ng-click="loadProduct(product)",ng-if="watchlist.length = 0")
       p You haven't added anything to your cellar yet.
@@ -7,4 +8,4 @@ doctype
       img.md-avatar(ng-src="{{ product.image_thumb_url }}")
       .md-list-item-text
         h3 {{ product.name }}
-        p {{ product.producer_name }}
+        p {{ product.producer_name }}  }
