updates to cellar handling

--- a/src/elsie.home/styles/watchlist.scss
+++ b/src/elsie.home/styles/watchlist.scss
@@ -1,5 +1,6 @@
 .watchlist {
   background-color: $grey-light;
+  padding-top: 56px;
   &.grid .product {
     background-size: cover;
     background-color: white;
