--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -20,7 +20,7 @@ doctype
       md-icon.swipe-down.md-primary keyboard_arrow_down
       h5.upcase Top wine picks from kwaf
       md-list
-        md-list-item.md-2-line(md-no-ink,ng-repeat="product in picks",ng-click="selectProduct(product)")
+        md-list-item.md-2-line(ng-repeat="product in picks",ng-click="selectProduct(product)")
           img.md-avatar(ng-src="{{ product.image_thumb_url }}")
           .md-list-item-text
             h3 {{ product.name }}
