--- a/src/elsie.home/templates/watchlist.jade
+++ b/src/elsie.home/templates/watchlist.jade
@@ -1,8 +1,11 @@
 doctype
 .watchlist
   md-list
-    md-list-item.md-2-line(ng-repeat="product in watchlist")
+    md-list-item.md-2-line(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
       img.md-avatar(ng-src="{{ product.image_thumb_url }}")
       .md-list-item-text
         h3 {{ product.name }}
         p {{ product.producer_name }}
+      .inventory
+        h2.light.pink {{ product.inventory_count | pretty }}
+        small.pink Stocked
