--- a/src/elsie.home/styles/watchlist.scss
+++ b/src/elsie.home/styles/watchlist.scss
@@ -1,10 +1,29 @@
 .watchlist {
-  background-color: $grey-light;
+  background-color: white;
   padding-top: 56px;
   &.grid .product {
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
+  }
+  md-list {
+    margin-top: 1em;
+    md-list-item {
+      > .md-avatar {
+        height: auto;
+      }
+      .inventory {
+        h2 {
+          margin: 18px 0 0;
+          line-height: 0.2em;
+          text-align: center;
+        }
+        small {
+          text-transform: uppercase;
+          font-size: 0.65em;
+        }
+      }
+    }
   }
 }
 
