--- a/src/elsie.home/templates/watchlist.jade
+++ b/src/elsie.home/templates/watchlist.jade
@@ -5,7 +5,7 @@ doctype
       img.md-avatar(ng-src="{{ product.image_thumb_url }}")
       .md-list-item-text
         h3 {{ product.name }}
-        p {{ product.producer_name }}
+        p {{ product.package }}
       .inventory
         h2.light.pink {{ product.inventory_count | pretty }}
         small.pink Stocked
