--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -100,6 +100,12 @@ small {
   z-index: 90;
 }
 
+input,
+input:focus,
+input:active {
+  outline: none;
+}
+
 button.md-button {
   border-radius: 0;
   background-color: transparent;
