--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -9,7 +9,7 @@ doctype
       h5.light.hint.md-accent(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"      
     .results(ng-if="query")
       md-list
-        md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
+        md-list-item.md-2-line(ng-repeat="product in results.products",ng-click="selectProduct(product)")
           img.md-avatar(ng-src="{{ product.image_thumb_url }}")
           .md-list-item-text
             h3 {{ product.name }}
