--- a/src/elsie.home/templates/watchlist.jade
+++ b/src/elsie.home/templates/watchlist.jade
@@ -1,11 +1,12 @@
 doctype
 .watchlist
-  md-list
-    md-list-item.md-2-line(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
-      img.md-avatar(ng-src="{{ product.image_thumb_url }}")
-      .md-list-item-text
-        h3 {{ product.name }}
-        p {{ product.package }}
-      .inventory
-        h2.light.pink {{ product.inventory_count | pretty }}
-        small.pink Stocked
+  md-content
+    md-list
+      md-list-item.md-2-line(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
+        img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+        .md-list-item-text
+          h3 {{ product.name }}
+          p {{ product.package }}
+        .stat
+          h2.light.pink {{ product.inventory_count | pretty }}
+          small.pink Stocked
