--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -3,7 +3,7 @@ doctype
   md-content
     .search(layout="column",layout-align="center center",ng-class="{ expanded: query }")
       h2(ng-if="!query") {{ welcome }}
-      input(type="text",placeholder="Search products and stores",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }")
+      input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }")
       md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
         md-icon close
       h5.light.hint.md-accent(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"      
@@ -25,3 +25,7 @@ doctype
           .md-list-item-text
             h3 {{ product.name }}
             p {{ product.producer_name }}
+          //- .stat
+          //-   h2.light.pink {{ product.pick.rating }}
+          //-   md-icon star_rate
+          //-   small.pink Rating
