--- a/src/elsie.search/styles/search.scss
+++ b/src/elsie.search/styles/search.scss
@@ -1,5 +1,5 @@
 .search {
-  background-color: $grey-light;
+  background-color: $purple;
   transition: height $transition;
   padding: 50% 0;
   &.expanded {
