--- a/src/elsie.store/templates/store.jade
+++ b/src/elsie.store/templates/store.jade
@@ -4,8 +4,8 @@ doctype
     .image
     md-toolbar.lower
       .md-toolbar-tools
-        h2.md-title {{ store.name }}
-        h5.md-subhead {{ store.address_line_1 }}
+        h2.md-title.white {{ store.name }}
+        h5.md-subhead.white {{ store.address_line_1 }}
   md-content.lower.md-default.md-primary-bg
     md-list
       md-list-item.md-2-line
