--- a/src/elsie.common/styles/action-bar.scss
+++ b/src/elsie.common/styles/action-bar.scss
@@ -5,10 +5,14 @@ md-toolbar.action-bar {
   right: 0;
   z-index: $z-index-control-main;
   background-color: transparent;
-  &.transparent {
-    md-icon.md-default-theme {
+  color: $white;
+  &.light {
+    button.md-button.md-icon-button > md-icon {
       color: $purple;
     }
+  }
+  button.md-button.md-icon-button > md-icon {
+    color: $white;
   }
   .md-toolbar-tools {
     h2 {
@@ -53,6 +57,9 @@ md-toolbar.action-bar {
       top: 4px;
       right: 4px;
       transition: all $transition;
+      &.right-button-2 {
+        right: 36px;
+      }
       &.visible {
         -webkit-transform: rotate(0deg) scale(1,1);
         transform: rotate(0deg) scale(1,1);
