--- a/src/elsie.home/styles/home.scss
+++ b/src/elsie.home/styles/home.scss
@@ -1,13 +1,9 @@
 .home {
   padding-top: $bump;
-  background-color: $grey-light;
+  background-color: $purple;
   width: 100%;
   height: 100%;
   overflow: visible;
-  > md-content {
-    //min-height: 100%;
-    height: 100%;
-  }
   .results {
     md-list-item {
       background-color: white;
