--- a/src/elsie.home/styles/home.scss
+++ b/src/elsie.home/styles/home.scss
@@ -4,11 +4,90 @@
   width: 100%;
   height: 100%;
   overflow: visible;
+  > md-content {
+    height: 100%;
+    background-color: $purple;
+    &.locked {
+      overflow: visible;
+    }
+  }
+  .explore-trigger {
+    text-align: center;
+  }
+  // .explore {
+  //   padding-top: 15px;
+  //   background-color: $purple;
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  // }
   .results {
+    md-list {
+      padding-top: 1px;
+    }
     md-list-item {
       background-color: white;
       box-shadow: $box-shadow;
     }
     overflow-y: auto;
+  }
+  .explore {
+    background-color: $purple;
+  }
+  .search {
+    //background-color: $purple;
+    background: #5ee0d1; /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover,  #5ee0d1 16%, #39c0b3 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover,  #5ee0d1 16%,#39c0b3 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center,  #5ee0d1 16%,#39c0b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5ee0d1', endColorstr='#39c0b3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    transition: height $transition;
+    padding: 50% 0;
+    &.expanded {
+      padding: 0;
+      input[type="text"] {
+        width: 100%;
+        margin-bottom: 0;
+      }
+    }
+    input[type="text"] {
+      border: none;
+      border-radius: 0;
+      -webkit-appearance: none;
+      box-shadow: $box-shadow;
+      font-size: 0.9em;
+      display: block;
+      padding: 12px 15px;
+      width: 85%;
+      margin-bottom: 20px;
+    }
+    h5.hint {
+      margin-top: 0;
+    }
+    .md-icon-button {
+      width: 10%;
+      height: 20px;
+      line-height: 18px;
+      border-radius: 0;
+      min-height: 0;
+      padding: 0;
+      display: block !important;
+      -webkit-transition: all $transition;
+      -webkit-transform: scale(0,0);
+      transform: scale(0,0);
+      transition: all $transition;
+      position: absolute;
+      z-index: 200;
+      top: 10px;
+      right: 5px;
+      md-icon {
+        color: $purple;
+      }
+      &.visible {
+        -webkit-transform: scale(1,1);
+        transform: scale(1,1);
+      }
+    }
   }
 }
