--- a/src/elsie.splash/styles/splash.scss
+++ b/src/elsie.splash/styles/splash.scss
@@ -27,7 +27,11 @@
     outline: none;
   }
   &.welcome {
-    background-color: $purple;
+    background: #5ee0d1; /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover,  #5ee0d1 16%, #39c0b3 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover,  #5ee0d1 16%,#39c0b3 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center,  #5ee0d1 16%,#39c0b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5ee0d1', endColorstr='#39c0b3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     .container {
       text-align: center;
       position: relative;
