--- a/src/elsie.splash/templates/login.jade
+++ b/src/elsie.splash/templates/login.jade
@@ -1,9 +1,9 @@
 .splash.login
   .container(layout="row", layout-wrap, layout-align="start center")
-    md-input-container.md-primary.md-default(flex="70",flex-offset="15")
+    md-input-container.md-primary(flex="70",flex-offset="15")
       label Email address
       input(type="email",ng-model="user.email")
-    md-input-container.md-primary.md-default(flex="70",flex-offset="15")
+    md-input-container.md-primary(flex="70",flex-offset="15")
       label Password
       input(type="password",ng-model="user.password")
     div(flex="100",layout="row",layout-align="center center")
