--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -74,7 +74,7 @@
   width: 100px;
   display: block;
   background: #79A70A;
-  background: linear-gradient(#674172 0%, #6F467A 100%);
+  background: linear-gradient($purple 0%, $purple-light 100%);
   box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
   position: absolute;
   top: 18 + $bump;
