--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -1,9 +1,9 @@
 doctype
 .home
   md-content(layout="row",layout-wrap,ng-class="{ locked: locked }")
-    .search(layout="column",layout-align="center center",ng-class="{ expanded: query }",flex="100")
+    .search(layout="column",layout-align="center center",ng-class="{ expanded: query, focused: focused }",flex="100")
       h2.white(ng-if="!query") {{ welcome }}
-      input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }")
+      input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-focus="focused = true",ng-blur="focused = false")
       md-button.md-icon-button.hide(ng-class="{ visible: query }",ng-click="clear()")
         md-icon close
       h5.light.hint.md-accent(ng-if="!query") Try "Gooderham &amp; Worts" or "Saison"
@@ -19,8 +19,8 @@ doctype
             .md-list-item-text
               h3 {{ product.name }}
               p {{ product.producer_name }}
-    .explore(flex="100",ng-show="picks")
-      md-card
+    .explore(flex="100")
+      md-card.folded(ng-class="{ 'unfolded' : picks.length > 0 }")
         md-card-content
           h4.card-title Top wine picks from kwäf
           md-list
