--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -5,6 +5,7 @@ $pink-light: #F8BBD0;
 $charcoal: #313131;
 $white: #FEFEFE;
 $grey-light: #FCFCFC;
+$cream: #f3f3f3;
 
 &.white {
   color: $grey-light; 
