--- a/src/elsie.home/styles/watchlist.scss
+++ b/src/elsie.home/styles/watchlist.scss
@@ -1,5 +1,5 @@
 .watchlist {
-  background-color: white;
+  background-color: $cream;
   padding-top: 56px;
   width: 100%;
   height: 100%;
@@ -10,10 +10,16 @@
   }
   > md-content {
     height: 100%;
+    background-color: $cream;
   }
   md-list {
     margin-top: 1em;
+    background-color: none;
     md-list-item {
+      margin: 10px;
+      box-shadow: $box-shadow;
+      background-color: white;
+      border-radius: 5px;
       > .md-avatar {
         height: auto;
       }
